added CRUD ability

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <script src="https://use.fontawesome.com/59a13d04a1.js"></script>
 </head>
 <body>
-<header id="main-nav" class="clearfix">    
+<header id="header" class="clearfix">    
 <div id="header_background" class="header_clearfix image_overlay">
-    <a href="" class="name">Sharlia Lee</a>
+<div class="logo-container">
+    <a href="" class="logo">Sharlia Lee</a> 
+   </div>
     <nav>
         <a href="">About</a>
         <a href="">Projects</a>
         <a href="">Contact</a>
     </nav>
-        <div id="header_image">
+        <div class="header_image">
             <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAdxAAAAJGE4M2RjMWFmLWJmMGYtNDI3My1hODRmLTY4MTIwZWJhNzA4MQ.jpg" class="img_header"></>
         </div>
         </div>
