more styling added

--- a/index.html
+++ b/index.html
@@ -9,25 +9,21 @@
 </head>
 <body>
     
-<header id="header" class="clearfix">    
-<div id="header_background" class="header_clearfix image_overlay">
+<header id="header" class="clearfix"> 
 <div class="logo-container">
     <a href="" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
-        <a href="">About</a>
-        <a href="">Projects</a>
-        <a href="">Contact</a>
+        <a href="" class="a-menu">About</a>
+        <a href="" class="a-menu">Projects</a>
+        <a href="" class="a-menu">Contact</a>
     </nav>
-        <div class="header_image">
-            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAdxAAAAJGE4M2RjMWFmLWJmMGYtNDI3My1hODRmLTY4MTIwZWJhNzA4MQ.jpg" class="img_header"></>
-        </div>
-        </div>
+    </div>
 </header> 
 
 <div class="wrapper wrapper_padding clearfix clearfix-before clearfix-after">
     <div class="col_1 about homepage_content">
-        <h2>About</h2>
+        <h2><strong>About</strong></h2>
         <hr>
         <p>Studio Oro dedicates our services to helping startups not only build useful websites; but we guide new businesses through the process of identifying, deploying, and measuring the best marketing strategy for their business. Rather than tell what we do best, we’re going to show you four wonderful success stories</p>
         <p>Prioritizing workflows, marketing, content creation, building your startup’s website and blog- Everything tends to look pretty scrappy at times. Having been there ourselves, we offer a unique focused perspective on growing startup businesses.</p>
@@ -39,7 +35,7 @@
         <p class="date">September 2015</p>
         <h4>Bicycle Shop Website</h4>
         <p class="date">August 2015</p>
-        <h4>Restaurant/Catering Site</h4>
+        <h4>Restaurant / Catering Site</h4>
         <p class="date">February 2015</p>
         <h4>Boutique/E-Commerce Site</h4>
         <p class="date">July 2014</p>
