Added paperclip Gem

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     
-<header id="header" class="clearfix"> 
+<header id="header" class="clearfix header-image"> 
 <div class="logo-container">
-    <a href="" class="logo">Sharlia Lee</a> 
+    <a href="https://portfolio-liali-dc.c9users.io/posts" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
-        <a href="" class="a-menu">About</a>
+        <a href="https://portfolio-liali-dc.c9users.io/posts" class="a-menu">About</a>
         <a href="" class="a-menu">Projects</a>
         <a href="" class="a-menu">Contact</a>
     </nav>
