Added all app updates

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <a href="https://portfolio-liali-dc.c9users.io/posts" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
-        <a href="https://portfolio-liali-dc.c9users.io/posts" class="a-menu">About</a>
-        <a href="" class="a-menu">Projects</a>
-        <a href="" class="a-menu">Contact</a>
+        <a href="https://portfolio-liali-dc.c9users.io/posts" style="padding-right: 2%;
+    padding-left: 2%;">About</a>
+        <a href="" style="padding-right: 2%;
+    padding-left: 2%;">Projects</a>
+        <a href="" style="padding-right: 2%;
+    padding-left: 2%;">Contact</a>
     </nav>
     </div>
 </header> 
